@@ -1,5 +1,13 @@
 2006-09-06  Jakub Jelinek  <jakub@redhat.com>
 
+	* posix/regex_internal.c (re_string_reconstruct): Handle
+	offset < pstr->valid_raw_len && pstr->offsets_needed case.
+	Ensure no bytes read before raw_mbs array.  Pass a saved copy of
+	pstr->valid_len - 1 rather than pstr->valid_raw_len - 1 to
+	re_string_context_at.
+	* posix/Makefile: Add rules to build and run bug-regex26 test.
+	* posix/bug-regex26.c: New test.
+
 	* locale/programs/ld-collate.c (collate_read): Goto sym_equiv_free
 	rather than col_sym_free.  Move seqp declaration earlier.
 
